# wasm-stuff

./: Cargo.toml  README.md
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
interface/src/: lib.rs
