cargo-features = ["per-package-target"]

[package]
name = "guest"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
interface = { path = "../interface"}
